--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,8 @@ Depends: R (>= 3.0)
 License: GPL
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
+Suggests: knitr 
+VignetteBuilder: knitr
 URL: https://github.com/WhyRFoundation/WhyR
-BugReports:https://github.com/WhyRFoundation/WhyR/issues
+BugReports: https://github.com/WhyRFoundation/WhyR/issues
